# nexora

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOSTINGER_DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  SYNC_ARCHITECTURE.md  VERCEL_DEPLOYMENT.md  eslint.config.js  index.html  package-lock.json  package.json  railway.json  vite.config.js
.github/workflows/: ci.yml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  COMPLIANCE.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  openapi.yaml
infra/: compose.yml  prometheus.yml
public/: manifest.webmanifest  service-worker.js
scripts/: dev.mjs  package-github.ps1  verify-interactions.mjs
server/: app.js  app.test.js  config.js  database.js  index.js  schema.sql  security.js
src/: App.jsx  api.js  data.js  hardware.js  main.jsx  offline-db.js  store.js  styles.css
